--- a/package.json
+++ b/package.json
@@ -34,12 +34,23 @@
     "mini-css-extract-plugin": "0.4.3",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.1.0",
+    "postcss-at-rules-variables": "^0.1.6",
+    "postcss-conditionals": "^2.1.0",
+    "postcss-custom-properties": "^8.0.8",
+    "postcss-each": "^0.10.0",
+    "postcss-extend": "^1.0.5",
     "postcss-flexbugs-fixes": "4.1.0",
+    "postcss-for": "^2.1.1",
+    "postcss-hexrgba": "^1.0.1",
     "postcss-import": "^12.0.1",
-    "postcss-loader": "3.0.0",
+    "postcss-loader": "^3.0.0",
+    "postcss-math": "0.0.10",
+    "postcss-mixins": "^6.2.0",
     "postcss-nested": "^4.1.0",
+    "postcss-plugin-px2rem": "^0.7.0",
     "postcss-preset-env": "6.0.6",
     "postcss-safe-parser": "4.0.1",
+    "postcss-simple-vars": "^5.0.1",
     "react": "^16.6.0",
     "react-app-polyfill": "^0.1.3",
     "react-dev-utils": "^6.0.5",
