--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "css-loader": "1.0.0",
     "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.6.0",
     "eslint": "5.6.0",
     "eslint-config-react-app": "^3.0.4",
     "eslint-loader": "2.1.1",
@@ -52,6 +54,7 @@
     "postcss-preset-env": "6.0.6",
     "postcss-safe-parser": "4.0.1",
     "postcss-simple-vars": "^5.0.1",
+    "prop-types": "^15.6.2",
     "react": "^16.6.0",
     "react-app-polyfill": "^0.1.3",
     "react-dev-utils": "^6.0.5",
